Correction affichage appareil en version mobile

--- a/web/src/assets/css/DetailDevice.css
+++ b/web/src/assets/css/DetailDevice.css
@@ -75,8 +75,12 @@
 }
 
 @media only screen and (max-width: 950px) {
+    .TopAppareil {
+        flex-direction: column;
+    }
+
     .DeviceTitle {
-        font-size: 2.5em;
+        font-size: 4.5em;
     }
 
     .DetailQRCode {
